2012-11-14  Anton Muhin  <antonm@chromium.org>

        Provide return types for custom WebGLRenderingContext methods
        https://bugs.webkit.org/show_bug.cgi?id=100777

        Reviewed by Kenneth Russell.

        No new tests as doesn't change generated code.

        * html/canvas/WebGLRenderingContext.idl:

2012-11-14  Kent Tamura  <tkent@chromium.org>

        Support for localization tests of calendar picker
        https://bugs.webkit.org/show_bug.cgi?id=102181

        Reviewed by Kentaro Hara.

        Introduce DateTimeChooserParameters::locale to inform locale to
        DateTimeChooser implementations. However we pass defaultLanguage
        unless tests calls internals.settings.
        setLangAttributeAwareFormControlUIEnabled(true) explicitly.

        Test: platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-ru.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setupDateTimeChooserParameters):
        Set DateTimeChooserParameters::locale up.
        * platform/DateTimeChooser.h:
        (DateTimeChooserParameters): Add 'locale' member.

2012-11-14  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: highlight is not updating as one edits CSS properties
        https://bugs.webkit.org/show_bug.cgi?id=102191

        Reviewed by Alexander Pavlov.

        We should update highlight upon layout / style recalculation.

        * inspector/InspectorInstrumentation.cpp:
        (WebCore):
        (WebCore::InspectorInstrumentation::didRecalculateStyleImpl):
        * inspector/InspectorPageAgent.cpp:
        (WebCore::InspectorPageAgent::InspectorPageAgent):
        (WebCore::InspectorPageAgent::enable):
        (WebCore::InspectorPageAgent::disable):
        (WebCore::InspectorPageAgent::domContentEventFired):
        (WebCore::InspectorPageAgent::didPaint):
        (WebCore::InspectorPageAgent::didLayout):
        (WebCore::InspectorPageAgent::didScroll):
        (WebCore):